// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config-applying actions should create START_ACTIVE_CONFIG_LOADING and END_ACTIVE_CONFIG_LOADING 1`] = `
Array [
  Object {
    "labelId": 123,
    "target": "active",
    "type": "START_ACTIVE_CONFIG_LOADING",
  },
  Object {
    "config": Object {
      "comment": "made a config",
      "data": Object {
        "field1": "value1",
        "field2": "value2",
        "field3": "value3",
      },
      "date": "2018-01-10T11:12:13",
      "id": 234,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "active",
        },
      ],
    },
    "labelId": 123,
    "target": "active",
    "type": "END_ACTIVE_CONFIG_LOADING",
  },
]
`;

exports[`config-applying actions should create START_ACTIVE_CONFIG_LOADING and SET_ERRORS 1`] = `
Array [
  Object {
    "labelId": 123,
    "target": "active",
    "type": "START_ACTIVE_CONFIG_LOADING",
  },
  Object {
    "errors": Array [
      "Произошла ошибка. Попробуйте ещё раз.",
    ],
    "id": "global",
    "type": "SET_ERRORS",
  },
]
`;

exports[`config-applying actions should create START_ACTIVE_CONFIG_LOADING and try to fetch ACTIVE config after error 1`] = `
Array [
  Object {
    "labelId": 123,
    "target": "test",
    "type": "START_ACTIVE_CONFIG_LOADING",
  },
  Object {
    "errors": Array [
      "Произошла ошибка. Попробуйте ещё раз.",
    ],
    "id": "global",
    "type": "SET_ERRORS",
  },
]
`;

exports[`config-applying actions should create START_ACTIVE_CONFIG_LOADING and try to fetch ACTIVE config after error 2`] = `
Array [
  Object {
    "labelId": 123,
    "target": "active",
    "type": "START_ACTIVE_CONFIG_LOADING",
  },
  Object {
    "errors": Array [
      "Произошла ошибка. Попробуйте ещё раз.",
    ],
    "id": "global",
    "type": "SET_ERRORS",
  },
]
`;
